Added WebDriverManager Compile

--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
     <version>3.7.1</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
 
 
