--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     </resources>
   <plugins>
   	<plugin>
+  	
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -221,6 +222,11 @@
       <version>${aspectj.version}</version>
    </dependency>
        
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>
+</dependency>
 
 
   </dependencies>
