--- a/pom.xml
+++ b/pom.xml
@@ -129,14 +129,14 @@
 </dependency> -->
     
     
-    
-    
-    <dependency>
+
+<dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.14.3</version>
-    <scope>compile</scope>
-     </dependency>
+    <version>7.0.0</version>
+    <scope>test</scope>
+</dependency>
+
       
     <dependency>
     <groupId>com.aventstack</groupId>
