--- a/pom.xml
+++ b/pom.xml
@@ -129,12 +129,12 @@
 </dependency> -->
     
     
-
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.0.0</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
 
       
